{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 400,
  "lineage": "305ee6d1-8593-9286-cdd8-62b38f2bfebd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06db98b3e35bfebdd",
            "arn": "arn:aws:ec2:ap-south-1:741448939728:elastic-ip/eipalloc-06db98b3e35bfebdd",
            "domain": "vpc",
            "id": "eipalloc-06db98b3e35bfebdd",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-235-155-167.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.155.167",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-serverless-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-nat-eip",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "consumer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08e8e63035c905918",
            "arn": "arn:aws:ec2:ap-south-1:741448939728:instance/i-05770a3f401ef6e30",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kafka-serverless-consumer-profile",
            "id": "i-05770a3f401ef6e30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kafka-serverless-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f07441baa6f323ee"
              }
            ],
            "primary_network_interface_id": "eni-0f07441baa6f323ee",
            "private_dns": "ip-10-0-2-92.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.92",
            "public_dns": "ec2-15-207-111-169.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.111.169",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "Owner": "DataEngineering",
                  "Project": "kafka-serverless",
                  "Terraform": "true"
                },
                "tags_all": {
                  "Environment": "dev",
                  "Owner": "DataEngineering",
                  "Project": "kafka-serverless",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-09b85f4de8371774b",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d9e53b56e158823",
            "tags": {
              "Name": "consumer"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "consumer",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4572db6f4b0a2f1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.consumer",
            "aws_iam_role.consumer",
            "aws_key_pair.kafka",
            "aws_security_group.consumer",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role",
            "tls_private_key.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "producer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08e8e63035c905918",
            "arn": "arn:aws:ec2:ap-south-1:741448939728:instance/i-0e7edb097d63b6ee7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kafka-serverless-producer-profile",
            "id": "i-0e7edb097d63b6ee7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kafka-serverless-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02862b36264e53f4d"
              }
            ],
            "primary_network_interface_id": "eni-02862b36264e53f4d",
            "private_dns": "ip-10-0-1-198.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-3-6-87-240.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.87.240",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "Owner": "DataEngineering",
                  "Project": "kafka-serverless",
                  "Terraform": "true"
                },
                "tags_all": {
                  "Environment": "dev",
                  "Owner": "DataEngineering",
                  "Project": "kafka-serverless",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-0ead9e4b75438dff1",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d13e5b83a07dd340",
            "tags": {
              "Name": "producer"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "producer",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f75b3e22c35281e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.producer",
            "aws_iam_role.producer",
            "aws_key_pair.kafka",
            "aws_security_group.producer",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role",
            "tls_private_key.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:internet-gateway/igw-0b66d7f031aeae673",
            "id": "igw-0b66d7f031aeae673",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-serverless-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-igw",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06db98b3e35bfebdd",
            "association_id": "eipassoc-00034dedca10b9027",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0509fff4cf0e9617c",
            "network_interface_id": "eni-044e2c6c46d12d143",
            "private_ip": "10.0.1.8",
            "public_ip": "13.235.155.167",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d13e5b83a07dd340",
            "tags": {
              "Name": "kafka-serverless-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-nat",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:route-table/rtb-01d266f63d64afe57",
            "id": "rtb-01d266f63d64afe57",
            "owner_id": "741448939728",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0509fff4cf0e9617c",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-serverless-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-private-rt",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:route-table/rtb-0d10082d59de5db59",
            "id": "rtb-0d10082d59de5db59",
            "owner_id": "741448939728",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b66d7f031aeae673",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-serverless-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-public-rt",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f448988442c98535",
            "region": "ap-south-1",
            "route_table_id": "rtb-01d266f63d64afe57",
            "subnet_id": "subnet-0d0ab71bacb6730ac"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0859004b5ee5a105a",
            "region": "ap-south-1",
            "route_table_id": "rtb-01d266f63d64afe57",
            "subnet_id": "subnet-08cef7187a88b18d0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da6d6783682bae9a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d10082d59de5db59",
            "subnet_id": "subnet-0d13e5b83a07dd340"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac9f406b11f276be",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d10082d59de5db59",
            "subnet_id": "subnet-00d9e53b56e158823"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consumer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group/sg-0e4572db6f4b0a2f1",
            "description": "Consumer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4572db6f4b0a2f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kafka-serverless-consumer-sg",
            "name_prefix": "",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-serverless-consumer-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-consumer-sg",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group/sg-03aedac977f712bd7",
            "description": "Kafka Communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03aedac977f712bd7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f75b3e22c35281e",
                  "sg-0e4572db6f4b0a2f1"
                ],
                "self": false,
                "to_port": 9098
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9098
              }
            ],
            "name": "kafka-serverless-kafka-sg",
            "name_prefix": "",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-serverless-kafka-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-kafka-sg",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.consumer",
            "aws_security_group.producer",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "producer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group/sg-07f75b3e22c35281e",
            "description": "Producer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f75b3e22c35281e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kafka-serverless-producer-sg",
            "name_prefix": "",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-serverless-producer-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-producer-sg",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-0d0ab71bacb6730ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0ab71bacb6730ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-serverless-private-1",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-private-1",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-08cef7187a88b18d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cef7187a88b18d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-serverless-private-2",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-private-2",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-0d13e5b83a07dd340",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d13e5b83a07dd340",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-serverless-public-1",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-public-1",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-00d9e53b56e158823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d9e53b56e158823",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-serverless-public-2",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-public-2",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0e85c466f9aff7464"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:vpc/vpc-0e85c466f9aff7464",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-009e59cf672d7091a",
            "default_route_table_id": "rtb-03e64be043cb4ac8e",
            "default_security_group_id": "sg-0da38a7a0e37c1181",
            "dhcp_options_id": "dopt-001d54595cb380f65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e85c466f9aff7464",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e64be043cb4ac8e",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "tags": {
              "Name": "kafka-serverless-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "kafka-serverless-vpc",
              "Owner": "DataEngineering",
              "Project": "kafka-serverless",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}